Prevent displaying long strings
Logic introduced to prevent long strings from overflowing the display
element. Buttons, other than clear and backspace, are disabled if the
displayed string becomes too long. Only by deleting digits /
operators, or by clearing the screen will the buttons be activated
again.

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,12 @@ h1 {
   display: flex;
 }
 
+#digits-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 #digits-container button {
   padding: 5px 12px;
   margin-bottom: 7px;
@@ -74,6 +80,7 @@ h1 {
 #operators-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin-left: 15px;
 }
 
